--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -339,5 +339,6 @@
         <activity android:name=".ui.activity.FindRankActivity" />
         <activity android:name=".ui.activity.SignActivity" />
         <activity android:name=".ui.activity.me.MsgPushActivity" />
+        <activity android:name=".ui.activity.me.AccountSecurityActivity" />
     </application>
 </manifest>
