--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,6 +188,8 @@ dependencies {
     implementation 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.1.0'
 
     implementation 'com.github.sahasbhop:apng-view:1.3'
+
+    implementation 'jp.wasabeef:glide-transformations:4.0.1'
 }
 
 protobuf {
