--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="label">
+        <meta-data android:name="android.max_aspect"  android:value="2.1"/>
         <!--百度统计-->
         <meta-data
             android:name="BaiduMobAd_STAT_ID"
