--- a/app/build.gradle
+++ b/app/build.gradle
@@ -190,6 +190,7 @@ dependencies {
     implementation 'com.github.sahasbhop:apng-view:1.3'
 
     implementation 'jp.wasabeef:glide-transformations:4.0.1'
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
 }
 
 protobuf {
