--- a/app/build.gradle
+++ b/app/build.gradle
@@ -190,6 +190,7 @@ dependencies {
     implementation 'com.github.sahasbhop:apng-view:1.3'
 
     implementation 'jp.wasabeef:glide-transformations:4.0.1'
+    implementation 'com.zhihu.android:matisse:0.5.2-beta4'
 }
 
 protobuf {
