--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,6 +191,7 @@ dependencies {
 
     implementation 'jp.wasabeef:glide-transformations:4.0.1'
     implementation 'com.zhihu.android:matisse:0.5.2-beta4'
+    implementation 'top.zibin:Luban:1.1.8'
 }
 
 protobuf {
