--- a/app/build.gradle
+++ b/app/build.gradle
@@ -193,6 +193,7 @@ dependencies {
     implementation 'com.zhihu.android:matisse:0.5.2-beta4'
     implementation 'top.zibin:Luban:1.1.8'
     implementation 'com.aliyun.ams:alicloud-android-push:3.1.4'
+    implementation 'com.aliyun.ams:alicloud-android-third-push:3.0.6@aar'
 }
 
 protobuf {
