--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
