--- a/app/build.gradle
+++ b/app/build.gradle
@@ -192,6 +192,8 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.8'
     implementation 'com.aliyun.ams:alicloud-android-push:3.1.4'
     implementation 'com.aliyun.ams:alicloud-android-third-push:3.0.6@aar'
+
+    implementation 'me.jessyan:autosize:1.1.2'
 }
 
 protobuf {
