--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ android {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+
     buildTypes {
         release {
             buildConfigField("boolean", "API_DEBUG_ENT", "false")
@@ -125,6 +130,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
     //滚动选择
     implementation 'com.contrarywind:Android-PickerView:4.1.7'
